--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,24 +1,26 @@
 <%- include("partials/header") %>
-<div class="container">
+<div class="container" style="margin: 20px auto;">
   <div class="row"></div>
-    <h1 class="w-100">
+    <h1 class="w-100" style="text-align: center;">
       Create a new campground
     </h1>
-    <div style="width:40%;margin:0 auto">
+    <div style="width:40%;margin:20px auto">
       <form method="post" action="/campgrounds">
+        <div class="form-group">
         <input
           class="form-control"
           type="text"
           name="name"
           placeholder="name"
-        />
+        /></div>
+        <div class="form-group">
         <input
           class="form-control"
           type="text"
           name="image"
           placeholder="image url"
-        />
-        <button class="btn btn-block btn-lg btn-default">Submit</button>
+        /></div>
+        <button class="btn btn-block btn-primary btn-lg">Submit</button>
       </form>
 
       <a class="btn btn-block btn-sm btn-default" href="/campgrounds">Go Back </a>
