--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- <link href="/app.css" type="text/css" rel="stylesheet" /> -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
+    <div class="container">
+      <nav class="navbar navbar-light bg-light navbar-expand-md">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="/">YelpCamp</a>
+          </div>
+
+          <div class="nav-item">
+            <ul class="nav navbar-nav navbar-right">
+              <li class="nav-item"><a class="nav-link" href="/">Login</a></li>
+              <li class="nav-item"><a class="nav-link" href="/">Sign Up</a></li>
+              <li class="nav-item"><a class="nav-link" href="/">Logout</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
+  
