--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -23,9 +23,14 @@
     <div class="col-md-3 col-sm-6">
       <div class="img-thumbnail">
         <img src="<%= camp.image %>" />
-        <div class="cation">
+        <div class="caption">
           <h4><%=camp.name%></h4>
         </div>
+        <p>
+          <a class="btn btn-primary" href="/campgrounds/<%=camp._id %>"
+            >More info</a
+          >
+        </p>
       </div>
     </div>
 
