--- a/views/form.ejs
+++ b/views/form.ejs
@@ -20,6 +20,13 @@
           name="image"
           placeholder="image url"
         /></div>
+        <div class="form-group">
+          <input
+            class="form-control"
+            type="text"
+            name="description"
+            placeholder="description"
+          /></div>
         <button class="btn btn-block btn-primary btn-lg">Submit</button>
       </form>
 
