adding comments function added

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header") %>
+<%- include("../partials/header") %>
 <div class="container" style="margin: 20px auto;">
   <div class="row"></div>
     <h1 class="w-100" style="text-align: center;">
@@ -33,5 +33,5 @@
       <a class="btn btn-block btn-sm btn-default" href="/campgrounds">Go Back </a>
     </div>
   </div>
-  <%- include("partials/footer") %>
+  <%- include("../partials/footer") %>
 </div>
