--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,11 +1,12 @@
-<%- include("partials/header") %>
+<%- include("../partials/header") %>
 <div class="container">
 <h1>This is a show template</h1>
 <h3><%= campground.name %></h2>
 <img src="<%= campground.image%>" />
 <p><%= campground.description %></p>
+<p><a class= "btn btn-success"href="/campgrounds/<%=campground._id%>/comments/new">Add New Comment</a></p>
 <% campground.comments.forEach((comm)=>{ %>
 <p><strong><%=comm.author%></strong> - <%= comm.text%> </p>
 <%})%>
 </div>
-<%- include("partials/footer") %>
+<%- include("../partials/footer") %>
