--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,6 +11,8 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
+    <link href="/stylesheets/main.css" rel="stylesheet" />
+
   </head>
   <body>
     <div class="container">
@@ -22,9 +24,14 @@
 
           <div class="nav-item">
             <ul class="nav navbar-nav navbar-right">
-              <li class="nav-item"><a class="nav-link" href="/">Login</a></li>
-              <li class="nav-item"><a class="nav-link" href="/">Sign Up</a></li>
-              <li class="nav-item"><a class="nav-link" href="/">Logout</a></li>
+              <% if(!currentUser){%>
+              <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+              <li class="nav-item"><a class="nav-link" href="/register">Sign Up</a></li>
+              <% } else {%>
+              <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
+              <li class="nav-item"><a class="nav-link" href="/">Signed In as 
+                <%= currentUser.username %></a></li>
+              <% }%>
             </ul>
           </div>
         </div>
