assosiated comments with users

--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -18,6 +18,8 @@
           class="form-control"
           type="text"
           name="comment[author]"
+          value="<%= currentUser.username%>"
+          hidden
           placeholder="Name"
         /></div>
         
