--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -31,7 +31,7 @@
         <% campground.comments.forEach((comm)=>{ %>
         <div class="row">
           <div class="col-md-12">
-            <strong><%=comm.author%></strong>
+            <strong><%=comm.author.username%></strong>
             <span class="float-right">10 days ago</span>
             <p><%= comm.text%></p>
           </div>
