--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -16,6 +16,12 @@
           <h4 class="float-right">$9.00/night</h4>
           <h4><a><%= campground.name %></a></h4>
           <p><%= campground.description %></p>
+          <p><em>Submitted by <%= campground.author.username %></em></p>
+          <a
+            class="btn btn-warning"
+            href="/campgrounds/<%=campground._id%>/edit"
+            >Edit Post</a
+          >
         </div>
       </div>
 
