--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -17,11 +17,21 @@
           <h4><a><%= campground.name %></a></h4>
           <p><%= campground.description %></p>
           <p><em>Submitted by <%= campground.author.username %></em></p>
+          <%if(currentUser && campground.author.id.equals(currentUser._id)){%>
           <a
             class="btn btn-warning"
             href="/campgrounds/<%=campground._id%>/edit"
-            >Edit Post</a
           >
+            Edit Post
+          </a>
+          <form
+            id="deleteForm"
+            action="/campgrounds/<%= campground._id%>?_method=DELETE"
+            method="post"
+          >
+            <button class="btn btn-danger">Delete</button>
+          </form>
+          <%}%>
         </div>
       </div>
 
