--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -20,7 +20,7 @@
   </header>
   <div class="row text-center" style="display: flex; flex-wrap: wrap;">
     <% campgrounds.forEach((camp)=>{%>
-    <div class="col-md-3 col-sm-6">
+    <div class="col-lg-3 col-sm-6 col-md-4">
       <div class="img-thumbnail">
         <img src="<%= camp.image %>" />
         <div class="caption">
