--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -16,6 +16,13 @@
           /></div>
           <div class="form-group">
           <input
+        class="form-control"
+        type="number"
+        name="price"value="<%= campground.price%>" placeholder="price"
+        min="1" step="1"
+      /></div>
+          <div class="form-group">
+          <input
             class="form-control"
             type="text"
             name="image"
