--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -15,6 +15,14 @@
         /></div>
         <div class="form-group">
         <input
+        class="form-control"
+        type="number"
+        name="price"
+        placeholder="price"
+        min="1" step="1"
+      /></div>
+        <div class="form-group">
+        <input
           class="form-control"
           type="text"
           name="image"
