--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -28,6 +28,6 @@
 
       <a class="btn btn-block btn-sm btn-default" href="/campgrounds">Go Back </a>
     </div>
-  </div>
+  </div></div>
   <%- include("../partials/footer") %>
-</div>
+
