--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,5 +1,54 @@
-<%- include("partials/header") %>
-<h1>Landing Page</h1>
-<p>Welcome to Yelpcamp</p>
-<a href="/campgrounds">View all campgrounds</a>
-<%- include("partials/footer") %>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>YelpCamp</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="/stylesheets/landing.css" />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"
+      type="text/javascript"
+      async
+    ></script>
+  </head>
+  <body>
+    <div class="container">
+      <%if(error && error.length > 0){%>
+      <div class="alert alert-danger" role="alert"><%error%></div>
+      <% }%> <%if(success && success.length > 0){%>
+      <div class="alert alert-success" role="alert"><%success%></div>
+      <% }%>
+    </div>
+    <div id="landing-header">
+      <h1>Welcome to Yelpcamp</h1>
+      <a href="/campgrounds" class="btn btn-lg btn-success"
+        >View all campgrounds</a
+      >
+    </div>
+
+    <ul class="slideshow">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
