--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,9 +1,33 @@
 <%- include("./partials/header") %>
-<h1>Login</h1>
 
-<form action="/login" method="POST">
-  <input type="text" name="username" placeholder="username" />
-  <input type="password" name="password" placeholder="password" />
-  <button>Login</button>
-</form>
+<div class="container" style="margin: 20px auto;">
+  <div class="row"></div>
+  <h1 class="w-100" style="text-align: center;">
+    Login
+  </h1>
+  <div style="width: 40%; margin: 20px auto;">
+    <form method="post" action="/login">
+      <div class="form-group">
+        <input
+          class="form-control"
+          type="text"
+          name="username"
+          placeholder="username"
+        />
+      </div>
+      <div class="form-group">
+        <input
+          class="form-control"
+          type="password"
+          name="password"
+          placeholder="password"
+        />
+      </div>
+
+      <button class="btn btn-block btn-primary btn-lg">Login</button>
+    </form>
+
+    <a class="btn btn-block btn-sm btn-default" href="/">Go Back </a>
+  </div>
+</div>
 <%- include("./partials/footer") %>
