--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,9 +1,35 @@
-<%- include("./partials/header") %>
-<h1>Sign app</h1>
 
-<form action="/register" method="POST">
-  <input type="text" name="username" placeholder="username" />
-  <input type="text" name="password" placeholder="password" />
-  <button>Sign Up</button>
+  <%- include("./partials/header") %>
+
+  <div class="container" style="margin: 20px auto;">
+    <div class="row"></div>
+    <h1 class="w-100" style="text-align: center;">
+      Sign Up
+    </h1>
+    <div style="width: 40%; margin: 20px auto;">
+      <form method="post" action="/login">
+        <div class="form-group">
+          <input
+            class="form-control"
+            type="text"
+            name="username"
+            placeholder="username"
+          />
+        </div>
+        <div class="form-group">
+          <input
+            class="form-control"
+            type="text"
+            name="password"
+            placeholder="password"
+          />
+        </div>
+
+        <button class="btn btn-block btn-primary btn-lg">Sign Up</button>
+      </form>
+
+      <a class="btn btn-block btn-sm btn-default" href="/">Go Back </a>
+    </div>
+  </div>
+  <%- include("./partials/footer") %>
 </form>
-<%- include("./partials/footer") %>
