--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,76 +1,80 @@
 <%- include("../partials/header") %>
 <div class="container">
   <div class="row">
-    <div class="col-md-3">
-      <p class="lead">Yelp Camp</p>
-      <div class="list-group">
+    <!-- <div class="col-md-3"> -->
+      <!-- <p class="lead">Yelp Camp</p> 
+        <div class="list-group">
         <li class="list-group-item active">Info 1</li>
         <li class="list-group-item">Info 2</li>
         <li class="list-group-item">Info 3</li>
       </div>
-    </div>
-    <div class="col-md-9">
-      <div class="img-thumbnail">
-        <img class="img-fluid" src="<%= campground.image%>" />
-        <div class="caption">
-          <h4 class="float-right">$<%=campground.price%>/night</h4>
-          <h4><a><%= campground.name %></a></h4>
-          <p><%= campground.description %></p>
-          <p><em>Submitted by <%= campground.author.username %></em></p>
-          <%if(currentUser && campground.author.id.equals(currentUser._id)){%>
-          <a
-            class="btn btn-warning"
-            href="/campgrounds/<%=campground._id%>/edit"
-          >
-            Edit Post
-          </a>
-          <form
-            id="deleteForm"
-            action="/campgrounds/<%= campground._id%>?_method=DELETE"
-            method="post"
-          >
-            <button class="btn btn-danger">Delete</button>
-          </form>
-          <%}%>
-        </div>
-      </div>
+       </div> -->
 
-      <div class="card card-body bg-light">
-        <div class="text-right">
-          <a
-            class="btn btn-success"
-            href="/campgrounds/<%=campground._id%>/comments/new"
-            >Add New Comment</a
-          >
-        </div>
-        <hr />
-        <% campground.comments.forEach((comm)=>{ %>
-        <div class="row">
-          <div class="col-md-12">
-            <strong><%=comm.author.username%></strong>
-            <span class="float-right">10 days ago</span>
-            <p><%= comm.text%></p>
-            <%if(currentUser && comm.author.id.equals(currentUser._id)){%>
+       <!-- delete if group items above are visible -->
+       <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <div class="img-thumbnail">
+          <img class="img-fluid" src="<%= campground.image%>" />
+          <div class="caption">
+            <h4 class="float-right">$<%=campground.price%>/night</h4>
+            <h4><a><%= campground.name %></a></h4>
+            <p><%= campground.description %></p>
+            <p><em>Submitted by <%= campground.author.username %></em></p>
+            <%if(currentUser && campground.author.id.equals(currentUser._id)){%>
             <a
-              class="btn btn-sm btn-warning"
-              href="/campgrounds/<%=campground._id%>/comments/<%=comm._id%>/edit"
+              class="btn btn-warning"
+              href="/campgrounds/<%=campground._id%>/edit"
             >
-              Edit
+              Edit Post
             </a>
             <form
               id="deleteForm"
-              action="/campgrounds/<%= campground._id%>/comments/<%= comm._id%>?_method=DELETE"
+              action="/campgrounds/<%= campground._id%>?_method=DELETE"
               method="post"
             >
-              <button class="btn btn-sm btn-danger">Delete</button>
+              <button class="btn btn-danger">Delete</button>
             </form>
             <%}%>
           </div>
         </div>
 
-        <%})%>
+        <div class="card card-body bg-light">
+          <div class="text-right">
+            <a
+              class="btn btn-success"
+              href="/campgrounds/<%=campground._id%>/comments/new"
+              >Add New Comment</a
+            >
+          </div>
+          <hr />
+          <% campground.comments.forEach((comm)=>{ %>
+          <div class="row">
+            <div class="col-md-12">
+              <strong><%=comm.author.username%></strong>
+              <!-- <span class="float-right">10 days ago</span> -->
+              <p><%= comm.text%></p>
+              <%console.log(currentUser); if(currentUser && comm.author.id && comm.author.id.equals(currentUser._id)){%>
+              <a
+                class="btn btn-sm btn-warning"
+                href="/campgrounds/<%=campground._id%>/comments/<%=comm._id%>/edit"
+              >
+                Edit
+              </a>
+              <form
+                id="deleteForm"
+                action="/campgrounds/<%= campground._id%>/comments/<%= comm._id%>?_method=DELETE"
+                method="post"
+              >
+                <button class="btn btn-sm btn-danger">Delete</button>
+              </form>
+              <%}%>
+            </div>
+          </div>
+
+          <%})%>
+        </div>
       </div>
     </div>
   </div>
+  <%- include("../partials/footer") %>
 </div>
-<%- include("../partials/footer") %>
